@@ -83,6 +83,11 @@ Differences between current and Android 2.1:
 - <pthread.h>: Add pthread_condattr_init/destroy/setpshared/getpshared functions
   to enable proper shared conditional variable initialization.
 
+  Modify the pthread_mutex_t implementation to use private futexes for
+  performance reasons. Mutexes are no longer shareable between processes
+  by default anymore, unless you use PTHREAD_PROCESS_SHARED with
+  pthread_mutexattr_setpshared().
+
   XXX: The implementation still always uses shared condvars, independent
        of the flags being selected. This will change in a later commit.
 
